--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/login_styles.css">
   <title>EcoClean - Login</title>
+  <link rel="website icon" type="png" href="img/logo.png">
 </head>
 
 <body>
