--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <title>EcoClean App</title>
+  <link rel="website icon" type="png" href="img/logo.png">
 </head>
 <body>
   <header>
